ingress-nginx-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-nginx
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
   # host: nginx-ingress-service-ip
   -  http:
       paths:
       - path: /(.+)
         backend:
          serviceName: nginx
          servicePort: 80
